<resources>
    <string name="app_name">萌比直播</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="user_longin_textview">登录</string>
    <string name="user_register_textview">注册</string>
    <string name="user_longin_button">登录</string>
    <string name="user_phone_editetxt">请输入您的手机号</string>
    <string name="user_password_editetxt">请输入密码</string>
    <string name="user_other_textview">其他登录方式</string>
    <string name="register_textview">注册</string>
    <string name="register_login_textview">登录</string>
    <string name="register_phone_editetxt">请输入您的手机号</string>
    <string name="register_identifying_code_editext">请输入验证码</string>
    <string name="register_password_editetxt">请输入密码</string>
    <string name="register_identifying_code_button">获取验证码</string>
    <string name="register_agree_textview">我已阅读并同意</string>
    <string name="register_service_agreement_textview">《用户服务协议》</string>
    <string name="register_agreement_button">同意协议并注册</string>
    <string name="home_title">首页</string>
    <string name="home_recommend">首页</string>
    <string name="home_">首页</string>
    <string name="live_title">直播</string>
    <string name="live_display_anchornickname">主播昵称</string>
    <string name="live_display_fans">粉丝：</string>
    <string name="live_display_roomusercount">人气</string>
    <string name="live_display_contribution">贡献榜</string>
    <string name="live_display_gfit_recommend">推荐</string>
    <string name="live_display_gift_lucky">幸运</string>
    <string name="live_display_gift_normal">普通</string>
    <string name="live_display_gift_luxury">豪华</string>
    <string name="live_display_gift_recharge">充值></string>
    <string name="live_display_gift_give">赠送</string>
    <string name="live_display_talk_send">发送</string>
    <string name="live_display_gift_error">系统出错,请求异常</string>
    <string name="account_center_recharge">充值</string>
    <string name="account_center_myfollow">我的关注</string>
    <string name="account_center_watchrecord">观看记录</string>
    <string name="account_center_settings">设置</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_info_profile_photo">头像</string>
    <string name="user_info_sprout">萌号</string>
    <string name="user_info_nickname">昵称</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_address">地区</string>
    <string name="user_info_sign">签名</string>
    <string name="user_info_birthday">生日</string>
    <string name="user_info_anchorlevel">主播等级</string>
    <string name="user_info_userlevel">用户等级</string>
    <string name="user_info_exitlogin">退出登录</string>
    <string name="user_info_photo">拍照</string>
    <string name="user_info_album">从相册选择</string>
    <string name="user_info_cancel">取消</string>
    <string name="user_info_nickname_hint">请输入您的昵称</string>
    <string name="user_info_nickname_length">昵称长度有限制20个字符</string>
    <string name="user_info_sex_m">男</string>
    <string name="user_info_sex_w">女</string>
    <string name="user_settings_feed_back">意见反馈</string>
    <string name="user_settings_custom_service">官方客服</string>
    <string name="user_settings_about">关于萌比</string>
    <string name="user_settings_version_update">版本更新</string>
    <string name="user_settings_exit_login">退出登录</string>
    <string name="user_settings_push">消息推送</string>
    <string name="user_settings_effect">直播特效设置</string>
    <string name="user_settings_rate">为我评分</string>
    <string name="user_feed_back_content">想要新功能？使用不方便？这里吐槽吧！</string>
    <string name="user_feed_back_qq">请输入联系方式（QQ、邮箱或电话号码，选填）</string>
    <string name="user_feed_back_email">邮箱</string>
    <string name="user_feed_back_submit">提 交</string>
    <string name="user_custom_fficial_service">官方客服</string>
    <string name="user_custom_fficial_service_qq">QQ：800851880</string>
    <string name="user_custom_guild_entered">公会入驻</string>
    <string name="user_custom_guild_entered_qq">QQ：1530675255</string>
    <string name="recharge_account_number">充值账号：</string>
    <string name="recharge_coins_balance">萌币余额：</string>
    <string name="recharge_mode">充值方式：</string>
    <string name="recharge_ali_pay">支付宝支付</string>
    <string name="recharge_we_chat_pay">微信支付</string>
    <string name="recharge_money">充值金额：</string>
    <string name="recharge_hint">充值到账有一定时间延迟，请耐心等待，如长时间未到账，\n请联系客服QQ：800851880</string>
    <string name="mengbi_unit">萌币</string>
    <string name="text_resolution">请选择合适的分辨率:</string>
    <string name="text_orientation">请选择显示方式:</string>
    <string name="text_frameRate">采集帧率:</string>
    <string name="text_videoBitrate">视频码率(Max):</string>
    <string name="text_audioBitrate">音频码率:</string>
    <string name="recommend">设置为推荐值</string>
    <string name="btn_start">直播</string>
    <string name="camera_error_title">相机异常</string>
    <string name="cannot_connect_camera">无法连接相机，请在系统设置里修改权限</string>
    <string name="camera_disabled">相机不可用</string>
    <string name="hello_world">Hello world!</string>
    <string name="click_to_shoot">开始直播</string>
    <string name="start_recording">开始录制</string>
    <string name="capture_thumbnail">截屏</string>
    <string name="beauty_switcher">美颜滤镜</string>
    <string name="watermark">水印</string>
    <string name="pitch">升降调</string>
    <string name="mute">静音</string>
    <string name="bgm">背景音乐</string>
    <string name="ear_mirror">耳返</string>
    <string name="pip">开始画中画</string>
    <string name="stop_pip">停止画中画</string>
    <string name="flash">Flash</string>
    <string name="picture_pip">开始图片画中画</string>
    <string name="stop_picture_pip">停止图片画中画</string>
    <string name="network">网络</string>
    <string name="history">历史</string>
    <string name="setting">设置</string>
    <string name="ksyun_name">金山云</string>
    <string name="ksyun_introduction_1">金山视频云依托业界领先的编解码技术与强大的分发服务，立足于金山云顶级的IaaS基础设施，提供一站式云直、点播服务。</string>
    <string name="ksyun_introduction_2">金山视频云提供内容生产及观看的工具，即推流播放SDK，凭借其完善的功能、卓越的兼容性及性能，满足客户不断涌现的业务需求，再通过金山魔方系统与第三方平台共同实现视频生态链的繁荣。</string>
    <string name="ksyun_introduction_3">金山云推流SDK支持H.264/H.265编码、软硬编，支持多种美颜滤镜特效、连麦，音频模块也在不断强化：美声、升降调、变声、混音等，弱网优化模块也颇有建树：码率自适应、网络主动探测、动态帧率等。</string>
    <string name="ksyun_introduction_4">金山云播放SDK通过首屏秒开、直播追赶等直播优化策略给直播提供一流的直播体验。</string>
    <string name="net_search">查找视频信息</string>
    <string name="set_setting">设置</string>
    <string name="popup_choice">请选择编码格式</string>
    <string name="net_scan">扫一扫</string>
    <string name="set_st">播放格式:</string>
    <string name="set_surface">SurfaceView</string>
    <string name="set_texture">TextureView</string>
    <string name="set_hwc">解码格式:</string>
    <string name="set_hard">硬解</string>
    <string name="set_soft">软解</string>
    <string name="start_vedio">播放</string>
    <string name="debugoff">Debug关</string>
    <string name="debugon">Debug开</string>
    <string name="debugchange">Debubg开关</string>
    <string name="vrchange">VR开关</string>
    <string name="set_ksytexture">KSYTexture</string>
    <string name="set_ksyview">KSYVideoView</string>
    <string name="glrender_view">GLRednerView</string>
    <string name="audio_filter_selected">音频滤镜</string>
    <string name="audio_only">音频推流</string>
    <string name="front_mirror">前置镜像</string>
    <string name="live_type">播放:</string>
    <string name="type_vod">点播</string>
    <string name="type_live">直播</string>
    <string name="type_floating">悬浮窗播放</string>
    <string name="type_record">边播边录</string>
    <string name="bftime_text">BufferTime:</string>
    <string name="bfsize_text">BufferSize:</string>
    <string name="text_setting">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_house_chat_edit_text_hint">聊聊呗...</string>
    <string name="gift_count_custom">自定义数量</string>
    <string name="confirm">确定</string>
    <string name="gift_custom_hint">请输入赠送数量 最多9999</string>
    <string name="audience_count">观众</string>
    <string name="ban">禁言</string>
    <string name="kick_out">踢出</string>
    <string name="upgrade_room_manager">升房管</string>
    <string name="adjust">调音画</string>
    <string name="no_motto_hint">这家伙很懒，还没有签名~</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number_hint">请输入您的手机号码或普通账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="nothing" />
    <string name="rank_title">榜单</string>
    <string name="follow_title">关注</string>
    <string name="message_title">消息</string>
    <string name="find_title">发现</string>
    <string name="me_title">我的</string>
    <string name="login_success">登录成功</string>
    <string name="load_more_end"><![CDATA[没有更多了～]]></string>
    <string name="personal">个人中心</string>
    <string name="recharge_type">充值方式</string>
    <string name="recharge_amount">请选择充值金额</string>
    <string name="recharge_tip"></string>
    <string name="recharge_confirm">确认支付 %1$.0f元</string>
    <string name="recharge_account">充值账号：%1$s</string>
    <string name="mengbi_left">萌币余额：</string>
    <string name="pay_success">支付成功</string>
    <string name="user_cancel">用户取消</string>
    <string name="pay_fail">支付失败</string>
    <string name="rmb">¥ %1$.2f</string>
    <string name="room_num">房间号：%1$d</string>
    <string name="personal_info">编辑资料</string>
    <string name="permission_storage_denid">存储权限被禁止,部分功能可能无法正常工作.</string>
    <string name="permission_camera_denid">相机权限被禁止,部分功能可能无法正常工作.</string>
    <string name="permission_denid">存储或相机权限被禁止,部分功能可能无法正常工作.</string>
    <string name="register_btn">同意协议并注册</string>
    <string name="verify_code_hint">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="upgrade">软件升级</string>
    <string name="login_out">退出登录</string>
    <string name="about_us">关于萌比</string>
    <string name="custom">官方客服</string>
    <string name="nick_name">编辑昵称</string>
    <string name="save">保存</string>
    <string name="gender">性别</string>
    <string name="empty_backpack">你的背包空空如也！</string>
    <string name="empty_guard_list">当前主播还没有守护用户\n快给心爱的主播开一个吧</string>
    <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.私聊\n5.防禁言\n6.聊天文字\n7.守护专属表情\n8.守护专属礼物\n9.守护进场特效</string>
    <string name="feedback">意见反馈</string>
    <string name="subscriptions">粉丝:%1$s</string>
    <string name="audience">在线\n%1$d</string>
    <string name="alert">提示</string>
    <string name="cancel">取消</string>
    <string name="net_error">网络连接断开，请检测网络设置</string>
    <string name="private_chat_permission_deny">VIP、守护、贵族或富豪6及以上玩家才能私聊哦！</string>
    <string name="kick_out_message">你已经被踢出踢出直播间</string>
    <string name="force_kick_out_message">用多个手机打开同一个直播间，强制退出之前的直播间</string>
    <string name="jump_live_house">是否离开当前直播间\n跳转到%1$s直播间</string>
    <string name="rank">榜单</string>
    <string name="tip">说明</string>
    <string name="treasure_box_tip">在线时间越长，开到宝箱越高级</string>
    <string name="tip_off_1">政治违规</string>
    <string name="tip_off_2">低俗色情</string>
    <string name="tip_off_3">言语谩骂</string>
    <string name="tip_off_4">广告骚扰</string>
    <string name="tip_off_5">外站拉人</string>
</resources>