<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/comm_toolbar" />

    <TextView
        android:id="@+id/tv_feedback"
        style="@style/setting_option_text_style"
        android:text="@string/user_settings_feed_back"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5" />

    <TextView
        android:id="@+id/tv_custom"
        style="@style/setting_option_text_style"
        android:text="@string/user_settings_custom_service" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e5e5e5" />

    <TextView
        android:id="@+id/about_us"
        style="@style/setting_option_text_style"
        android:text="@string/user_settings_about" />

    <RelativeLayout
        android:id="@+id/rl_version_container"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/comm_white"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="13.5dp"
            android:gravity="center"
            android:text="@string/upgrade"
            android:textColor="#323232"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#646464"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_upgrade_btn_bg"
        android:text="@string/login_out"
        android:textColor="@color/comm_white"
        android:textSize="18sp" />

</LinearLayout>