<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/user_info_photo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_info_photo"
        android:textColor="@color/font_color_1"
        android:background="@color/font_color_white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"/>
    <Button
        android:id="@+id/user_info_album"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_info_album"
        android:background="@color/font_color_white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"/>
    <Button
        android:id="@+id/user_info_cancel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_info_cancel"
        android:background="@color/font_color_white"/>
</LinearLayout>