<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/white_toolbar" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/feed_back_edittext"
        android:gravity="left|top"
        android:hint="@string/user_feed_back_content"
        android:paddingLeft="18dp"
        android:paddingTop="13dp"
        android:textColor="@color/colorblack"
        android:textColorHint="#b9b9b9"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_shawdow_deep"
        android:hint="@string/user_feed_back_qq"
        android:paddingLeft="@dimen/padding_12"
        android:textColor="@color/colorblack"
        android:textColorHint="#30000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/feed_back_edittext"
        android:hint="@string/user_feed_back_email"
        android:paddingLeft="18dp"
        android:textColor="@color/colorblack"
        android:textColorHint="#b9b9b9"
        android:textSize="15sp" />

    <Button
        android:id="@+id/user_settings_feed_back_submit_but"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_upgrade_btn_bg"
        android:text="@string/user_feed_back_submit"
        android:textColor="@color/textview"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>