<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/main_tab"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_tab_home_icon"
            android:text="@string/home_title" />

        <RadioButton
            android:id="@+id/rb_follow"
            style="@style/main_tab"
            android:drawableTop="@drawable/selector_main_tab_follow_icon"
            android:text="@string/follow_title" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/main_tab"
            android:drawableTop="@drawable/selector_main_tab_me_icon"
            android:text="@string/me_title" />

    </RadioGroup>


</LinearLayout>
