<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_textview"
            android:textColor="@color/rv_item_nickname"
            android:textSize="24sp" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/register_mengbi_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@mipmap/ic_footer_logo"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar"/>

    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="388dp"
        android:layout_height="54dp"
        android:layout_marginTop="34dp"
        android:textSize="22sp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@mipmap/ic_login_phone"
        android:drawablePadding="10dp"
        android:hint="@string/register_phone_editetxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_mengbi_logo"/>

    <EditText
        android:id="@+id/register_user_email"
        android:layout_width="388dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@mipmap/ic_register_email"
        android:drawablePadding="10dp"
        android:hint="@string/register_identifying_code_editext"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_name" />

    <Button
        android:id="@+id/register_identifying_code"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_identifying_code_button"
        android:textColor="@color/textview"
        app:layout_constraintRight_toRightOf="@id/register_user_email"
        app:layout_constraintTop_toBottomOf="@id/register_user_name" />


    <EditText
        android:id="@+id/register_user_password"
        android:layout_width="388dp"
        android:layout_height="54dp"
        android:layout_marginTop="22dp"
        android:textSize="22sp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@mipmap/ic_login_lock"
        android:drawablePadding="10dp"
        android:hint="@string/register_password_editetxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_email"/>


    <LinearLayout
        android:id="@+id/regsiter_agree_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_password">
        <CheckBox
            android:id="@+id/register_user_checked"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>

        <TextView
            android:id="@+id/register_user_agree"
            android:layout_width="132dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:textSize="18sp"
            android:text="@string/register_agree_textview"
            app:layout_constraintLeft_toRightOf="@id/register_user_checked"
            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>

        <TextView
            android:id="@+id/register_user_service_agreement"
            android:layout_width="144dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:textSize="18sp"
            android:textColor="@color/register_user_service_agreement"
            android:text="@string/register_service_agreement_textview"
            app:layout_constraintLeft_toRightOf="@id/register_user_agree"
            app:layout_constraintTop_toBottomOf="@id/register_user_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_user"
        android:layout_width="388dp"
        android:layout_height="55dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_agreement_button"
        android:textColor="@color/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regsiter_agree_layout"/>

</android.support.constraint.ConstraintLayout>