<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/font_color_51"
    android:orientation="vertical">

    <include layout="@layout/activity_base_toolbar" />

    <Button
        android:id="@+id/user_settings_feed_back_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28"
        android:layout_marginLeft="@dimen/x16"
        android:background="@null"
        android:drawableRight="@drawable/arrowright"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/x15"
        android:text="@string/user_settings_feed_back"
        android:textColor="@color/font_color_47" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/font_color_12" />

    <Button
        android:id="@+id/user_settings_custom_service_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28"
        android:layout_marginLeft="@dimen/x16"
        android:background="@null"
        android:drawableRight="@drawable/arrowright"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/x15"
        android:text="@string/user_settings_custom_service"
        android:textColor="@color/font_color_47" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/font_color_12" />

    <Button
        android:id="@+id/user_settings_about_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28"
        android:layout_marginLeft="@dimen/x16"
        android:background="@null"
        android:drawablePadding="@dimen/y10"
        android:drawableRight="@drawable/arrowright"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/x15"
        android:text="@string/user_settings_about"
        android:textColor="@color/font_color_47" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/font_color_12" />

    <Button
        android:id="@+id/user_settings_version_update_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28"
        android:layout_marginLeft="@dimen/x16"
        android:background="@null"
        android:drawableRight="@drawable/arrowright"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/x15"
        android:text="@string/user_settings_version_update"
        android:textColor="@color/font_color_47" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/font_color_12" />

    <Button
        android:id="@+id/user_settings_exit_login_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28"
        android:layout_gravity="center|center_vertical"
        android:layout_marginLeft="@dimen/x7"
        android:layout_marginRight="@dimen/x7"
        android:layout_marginTop="@dimen/y25"
        android:background="@drawable/home_rounded_button"
        android:text="@string/user_settings_exit_login"
        android:textColor="@color/textview" />
</LinearLayout>
