<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="温馨提示"
        android:textColor="#77ff8282"
        android:layout_marginTop="11dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="成功举报后，官方会在24小时内核实并处理"
        android:textColor="#77808080"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="15dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_tip_1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/tip_off_1"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_tip_2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/tip_off_2"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_tip_3"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/tip_off_3"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_tip_4"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/tip_off_4"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_tip_5"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/tip_off_5"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="其他"
        android:textColor="#808080"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="取消"
        android:textColor="#D3D3D3"
        android:textSize="12sp" />

</LinearLayout>